- Añade nuevo control Implementation Switcher
- Eliminar fichero index.md de documentación para utilizar README.md en su lugar
- Se crea nueva página con enlaces a la documentación
- Eliminación y configuración de perfiles de compilación
- Eliminación de plantillas de /files/templates y /templates dentro del war
- Añadido bgcolorcontainer a los parámetros de mapas para aplicar un color al fondo del html del mapa de OpenLayers.
- Se elimina la clase ParametersAdapterV3ToV4 de api-idee-rest.
- Se implementa el parámetro cql para WMS, junto a get/set.
- Se añade método setName para sobreescribir el nombre de las capas WMS.
- Se añade método setURL para sobreescribir la URL de las capas WMS.
- Se elimina filtro que impide usar el parámetro tiled si la capa WMS tiene la versión 1.3.0.
- Se marca set/getOL3Layer como obsoleto y se reemplazan referencias a this.ol3Layer por this.olLayer
- Modificación del evento ADDED_TO_MAP para que se lance desde fachada en capas WMS. 
- Se implementa min/max scale para todos los tipos de capas y se añade los métodos get/set en la clase Layer.
- Se eliminan métodos get/set type de las capas OSM, MapLibre y GeoTIFF.
- Se añade mensaje de aviso al usar transparent como parámetro en capas.
- Añadido template como parámetro junto a sus métodos get/set en capas vectoriales.
- Se activa el extract por defecto en las capas vectoriales.
- Mejoras en la comprobación de la implementación en capas Vector.
- Se implementa el uso del ticket en capas WMS, incluyendo el control getFeatureInfo y el plugin information.
- Se implementa el uso del ticket en el plugin comparators.
- Se implementa el parámetro tileLoadFunction en el vendors, ademas de setTileLoadFunction.
- Se añade el parámetro "mergeLayers" en las capas WMS.
- Se añade /doc a api/actions.
- Se permite añadir al mapa el mismo servicio con igual nombre más de una vez (idLayer).
- Se añaden métodos getId y setId para sobreescribir el identificador de la capa.
