@@ -36,4 +36,5 @@
 - Se añade /doc a api/actions.
 - Se permite añadir al mapa el mismo servicio con igual nombre más de una vez (idLayer).
 - Se añaden métodos getId y setId para sobreescribir el identificador de la capa.
+- Reincorpora /resources/svg en /api/actions
 
